精度評価関数の一部を実装

--- a/practice/train.ipynb
+++ b/practice/train.ipynb
@@ -208,7 +208,7 @@
     "        imgs = imgs.to(device=device)\n",
     "        labels = labels.to(device=device)\n",
     "        outputs = model(imgs)\n",
-    "        "
+    "    print(\"\")"
    ]
   },
   {
