--- a/practice/train_cifar10.ipynb
+++ b/practice/train_cifar10.ipynb
@@ -82,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1553cd0599b0>"
+       "<matplotlib.image.AxesImage at 0x15406aabd400>"
       ]
      },
      "execution_count": 4,
@@ -204,7 +204,7 @@
     "# 損失関数の定義\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "# Optimizerの定義\n",
-    "optimizer = optim.SGD(resnet18.parameters(), lr=1e-3)"
+    "optimizer = optim.SGD(resnet18.parameters(), lr=3*1e-3)"
    ]
   },
   {
@@ -255,58 +255,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-09-25 23:23:55.374997 Epoch 0, Training loss 0.030016513109207152\n",
-      "Accuracy 0.3783\n",
-      "2022-09-25 23:24:30.263080 Epoch 1, Training loss 0.027630066032409667\n",
-      "Accuracy 0.3546\n",
-      "2022-09-25 23:25:05.166485 Epoch 2, Training loss 0.02436999591588974\n",
-      "Accuracy 0.3847\n",
-      "2022-09-25 23:25:39.978515 Epoch 3, Training loss 0.02282743285894394\n",
-      "Accuracy 0.4173\n",
-      "2022-09-25 23:26:14.797814 Epoch 4, Training loss 0.021661278488636016\n",
-      "Accuracy 0.4864\n",
-      "2022-09-25 23:26:49.608673 Epoch 5, Training loss 0.020636741350889207\n",
-      "Accuracy 0.4246\n",
-      "2022-09-25 23:27:24.385447 Epoch 6, Training loss 0.019754293645620345\n",
-      "Accuracy 0.4822\n",
-      "2022-09-25 23:27:59.160464 Epoch 7, Training loss 0.018988832066059114\n",
-      "Accuracy 0.4835\n",
-      "2022-09-25 23:28:33.948881 Epoch 8, Training loss 0.018258316884040834\n",
-      "Accuracy 0.3638\n",
-      "2022-09-25 23:29:08.785098 Epoch 9, Training loss 0.017665082203149794\n",
-      "Accuracy 0.5599\n",
-      "2022-09-25 23:29:43.557656 Epoch 10, Training loss 0.017054505878686906\n",
-      "Accuracy 0.5683\n",
-      "2022-09-25 23:30:18.351506 Epoch 11, Training loss 0.016518129703998567\n",
-      "Accuracy 0.6253\n",
-      "2022-09-25 23:30:53.127588 Epoch 12, Training loss 0.015958960835933685\n",
-      "Accuracy 0.6224\n",
-      "2022-09-25 23:31:27.887613 Epoch 13, Training loss 0.015494141937494278\n",
-      "Accuracy 0.6555\n",
-      "2022-09-25 23:32:02.627911 Epoch 14, Training loss 0.015144522963762284\n",
-      "Accuracy 0.6514\n",
-      "2022-09-25 23:32:37.387844 Epoch 15, Training loss 0.014758165783882142\n",
-      "Accuracy 0.5915\n",
-      "2022-09-25 23:33:12.187532 Epoch 16, Training loss 0.014352882353067397\n",
-      "Accuracy 0.6463\n",
-      "2022-09-25 23:33:46.978679 Epoch 17, Training loss 0.01400699805378914\n",
-      "Accuracy 0.5981\n",
-      "2022-09-25 23:34:21.744896 Epoch 18, Training loss 0.013676689012050628\n",
-      "Accuracy 0.6032\n",
-      "2022-09-25 23:34:56.546523 Epoch 19, Training loss 0.013413407707214355\n",
-      "Accuracy 0.648\n"
+      "2022-09-27 00:42:17.351081 Epoch 0, Training loss 0.02693532013654709\n",
+      "Accuracy 0.4402\n",
+      "2022-09-27 00:42:52.441346 Epoch 1, Training loss 0.02830454883813858\n",
+      "Accuracy 0.3932\n",
+      "2022-09-27 00:43:27.487057 Epoch 2, Training loss 0.023518703780174257\n",
+      "Accuracy 0.4298\n",
+      "2022-09-27 00:44:02.421758 Epoch 3, Training loss 0.021457109351158143\n",
+      "Accuracy 0.496\n",
+      "2022-09-27 00:44:37.310176 Epoch 4, Training loss 0.019799955129623414\n",
+      "Accuracy 0.5181\n",
+      "2022-09-27 00:45:12.198578 Epoch 5, Training loss 0.018504465988874435\n",
+      "Accuracy 0.5672\n",
+      "2022-09-27 00:45:47.131484 Epoch 6, Training loss 0.017375183589458467\n",
+      "Accuracy 0.5657\n",
+      "2022-09-27 00:46:22.059913 Epoch 7, Training loss 0.016544864119291305\n",
+      "Accuracy 0.5204\n",
+      "2022-09-27 00:46:56.954523 Epoch 8, Training loss 0.01567114900350571\n",
+      "Accuracy 0.6475\n",
+      "2022-09-27 00:47:31.870323 Epoch 9, Training loss 0.015030138313770295\n",
+      "Accuracy 0.6549\n",
+      "2022-09-27 00:48:06.813821 Epoch 10, Training loss 0.01441231016755104\n",
+      "Accuracy 0.5588\n",
+      "2022-09-27 00:48:41.689208 Epoch 11, Training loss 0.013935139633417129\n",
+      "Accuracy 0.6599\n",
+      "2022-09-27 00:49:16.625388 Epoch 12, Training loss 0.013433377559781074\n",
+      "Accuracy 0.6781\n",
+      "2022-09-27 00:49:51.508513 Epoch 13, Training loss 0.012984370949864387\n",
+      "Accuracy 0.6706\n",
+      "2022-09-27 00:50:26.457711 Epoch 14, Training loss 0.012604651724696159\n",
+      "Accuracy 0.5983\n",
+      "2022-09-27 00:51:01.378775 Epoch 15, Training loss 0.012182083776593208\n",
+      "Accuracy 0.709\n",
+      "2022-09-27 00:51:36.157514 Epoch 16, Training loss 0.011842375114560127\n",
+      "Accuracy 0.5035\n",
+      "2022-09-27 00:52:10.975616 Epoch 17, Training loss 0.011460312990546227\n",
+      "Accuracy 0.7405\n",
+      "2022-09-27 00:52:45.798128 Epoch 18, Training loss 0.011110285568833351\n",
+      "Accuracy 0.7388\n",
+      "2022-09-27 00:53:20.559321 Epoch 19, Training loss 0.010810523993372918\n",
+      "Accuracy 0.6879\n",
+      "2022-09-27 00:53:55.384078 Epoch 20, Training loss 0.010501967607140542\n",
+      "Accuracy 0.7201\n",
+      "2022-09-27 00:54:30.210747 Epoch 21, Training loss 0.010127194805145264\n",
+      "Accuracy 0.7369\n",
+      "2022-09-27 00:55:04.974302 Epoch 22, Training loss 0.009815771228671074\n",
+      "Accuracy 0.7827\n",
+      "2022-09-27 00:55:39.752101 Epoch 23, Training loss 0.009652004669904709\n",
+      "Accuracy 0.7221\n",
+      "2022-09-27 00:56:14.541796 Epoch 24, Training loss 0.009315552551150323\n",
+      "Accuracy 0.6632\n",
+      "2022-09-27 00:56:49.292410 Epoch 25, Training loss 0.008969059526920318\n",
+      "Accuracy 0.7471\n",
+      "2022-09-27 00:57:24.093035 Epoch 26, Training loss 0.008769763207435608\n",
+      "Accuracy 0.6579\n",
+      "2022-09-27 00:57:58.870740 Epoch 27, Training loss 0.008534501661658287\n",
+      "Accuracy 0.8134\n",
+      "2022-09-27 00:58:33.671954 Epoch 28, Training loss 0.00823341138511896\n",
+      "Accuracy 0.8103\n",
+      "2022-09-27 00:59:08.476008 Epoch 29, Training loss 0.008058163560032845\n",
+      "Accuracy 0.7938\n",
+      "2022-09-27 00:59:43.263945 Epoch 30, Training loss 0.007897451248168945\n",
+      "Accuracy 0.759\n",
+      "2022-09-27 01:00:18.048256 Epoch 31, Training loss 0.007628068424761296\n",
+      "Accuracy 0.7881\n",
+      "2022-09-27 01:00:52.848734 Epoch 32, Training loss 0.007449071896970272\n",
+      "Accuracy 0.8074\n",
+      "2022-09-27 01:01:27.642562 Epoch 33, Training loss 0.007247460941672325\n",
+      "Accuracy 0.7606\n",
+      "2022-09-27 01:02:02.448319 Epoch 34, Training loss 0.007149790626168251\n",
+      "Accuracy 0.8178\n",
+      "2022-09-27 01:02:37.240804 Epoch 35, Training loss 0.006903324825763703\n",
+      "Accuracy 0.7551\n",
+      "2022-09-27 01:03:12.043985 Epoch 36, Training loss 0.006726803153753281\n",
+      "Accuracy 0.7916\n",
+      "2022-09-27 01:03:46.870519 Epoch 37, Training loss 0.0065405020892620085\n",
+      "Accuracy 0.8266\n",
+      "2022-09-27 01:04:21.639382 Epoch 38, Training loss 0.006433719080984592\n",
+      "Accuracy 0.8048\n",
+      "2022-09-27 01:04:56.444269 Epoch 39, Training loss 0.0062958051747083665\n",
+      "Accuracy 0.8224\n",
+      "2022-09-27 01:05:31.232219 Epoch 40, Training loss 0.006092215861678124\n",
+      "Accuracy 0.8437\n",
+      "2022-09-27 01:06:06.002902 Epoch 41, Training loss 0.0059568050609529015\n",
+      "Accuracy 0.8028\n",
+      "2022-09-27 01:06:40.819501 Epoch 42, Training loss 0.00587986370831728\n",
+      "Accuracy 0.7789\n",
+      "2022-09-27 01:07:15.591982 Epoch 43, Training loss 0.005783760585188866\n",
+      "Accuracy 0.8506\n",
+      "2022-09-27 01:07:50.374407 Epoch 44, Training loss 0.005561024237424135\n",
+      "Accuracy 0.8375\n",
+      "2022-09-27 01:08:25.162928 Epoch 45, Training loss 0.0054869966855645175\n",
+      "Accuracy 0.8348\n",
+      "2022-09-27 01:08:59.947705 Epoch 46, Training loss 0.00534991722047329\n",
+      "Accuracy 0.8241\n",
+      "2022-09-27 01:09:34.753642 Epoch 47, Training loss 0.005253105610609055\n",
+      "Accuracy 0.8187\n",
+      "2022-09-27 01:10:09.568916 Epoch 48, Training loss 0.005113919156938792\n",
+      "Accuracy 0.8102\n",
+      "2022-09-27 01:10:44.326184 Epoch 49, Training loss 0.005043215036988258\n",
+      "Accuracy 0.8409\n",
+      "2022-09-27 01:11:19.129358 Epoch 50, Training loss 0.00488014240860939\n",
+      "Accuracy 0.8493\n",
+      "2022-09-27 01:11:53.927757 Epoch 51, Training loss 0.004837786152213812\n",
+      "Accuracy 0.8046\n",
+      "2022-09-27 01:12:28.681789 Epoch 52, Training loss 0.004694427412450314\n",
+      "Accuracy 0.7841\n",
+      "2022-09-27 01:13:03.482807 Epoch 53, Training loss 0.004622794247418642\n",
+      "Accuracy 0.7921\n",
+      "2022-09-27 01:13:38.281325 Epoch 54, Training loss 0.00448952234134078\n",
+      "Accuracy 0.7604\n",
+      "2022-09-27 01:14:13.068471 Epoch 55, Training loss 0.004474867476373911\n",
+      "Accuracy 0.7384\n",
+      "2022-09-27 01:14:47.886579 Epoch 56, Training loss 0.004336556682884693\n",
+      "Accuracy 0.8415\n",
+      "2022-09-27 01:15:22.672101 Epoch 57, Training loss 0.004239297137260437\n",
+      "Accuracy 0.8132\n",
+      "2022-09-27 01:15:57.457878 Epoch 58, Training loss 0.004158461427465081\n",
+      "Accuracy 0.8512\n",
+      "2022-09-27 01:16:32.256694 Epoch 59, Training loss 0.004034748677909374\n",
+      "Accuracy 0.7944\n",
+      "2022-09-27 01:17:07.041509 Epoch 60, Training loss 0.004040630459785461\n",
+      "Accuracy 0.8415\n",
+      "2022-09-27 01:17:41.822575 Epoch 61, Training loss 0.003892703960239887\n",
+      "Accuracy 0.8286\n",
+      "2022-09-27 01:18:16.634686 Epoch 62, Training loss 0.0038025462462007997\n",
+      "Accuracy 0.843\n",
+      "2022-09-27 01:18:51.434210 Epoch 63, Training loss 0.0037715070071071386\n",
+      "Accuracy 0.8644\n",
+      "2022-09-27 01:19:26.231032 Epoch 64, Training loss 0.0036747247163951397\n",
+      "Accuracy 0.7789\n",
+      "2022-09-27 01:20:01.050940 Epoch 65, Training loss 0.003619227196201682\n",
+      "Accuracy 0.8367\n",
+      "2022-09-27 01:20:35.828498 Epoch 66, Training loss 0.0035595714554190637\n",
+      "Accuracy 0.8363\n",
+      "2022-09-27 01:21:10.638875 Epoch 67, Training loss 0.0034205563488975167\n",
+      "Accuracy 0.838\n",
+      "2022-09-27 01:21:45.415005 Epoch 68, Training loss 0.003367335466817021\n",
+      "Accuracy 0.8577\n",
+      "2022-09-27 01:22:20.199889 Epoch 69, Training loss 0.0033374193197488783\n",
+      "Accuracy 0.8155\n",
+      "2022-09-27 01:22:55.023000 Epoch 70, Training loss 0.003263125017285347\n",
+      "Accuracy 0.8433\n",
+      "2022-09-27 01:23:29.806576 Epoch 71, Training loss 0.0031925197872519494\n",
+      "Accuracy 0.8644\n",
+      "2022-09-27 01:24:04.612078 Epoch 72, Training loss 0.0031305094867944716\n",
+      "Accuracy 0.8643\n",
+      "2022-09-27 01:24:39.407453 Epoch 73, Training loss 0.0030366244206577538\n",
+      "Accuracy 0.8274\n",
+      "2022-09-27 01:25:14.182400 Epoch 74, Training loss 0.003000168044641614\n",
+      "Accuracy 0.8553\n",
+      "2022-09-27 01:25:48.989105 Epoch 75, Training loss 0.0029426692573726178\n",
+      "Accuracy 0.8649\n",
+      "2022-09-27 01:26:23.788443 Epoch 76, Training loss 0.002813974849358201\n",
+      "Accuracy 0.8084\n",
+      "2022-09-27 01:26:58.597141 Epoch 77, Training loss 0.0028405989346653223\n",
+      "Accuracy 0.8076\n",
+      "2022-09-27 01:27:33.401836 Epoch 78, Training loss 0.0027372883602231743\n",
+      "Accuracy 0.8587\n",
+      "2022-09-27 01:28:08.164952 Epoch 79, Training loss 0.002729768309444189\n",
+      "Accuracy 0.8353\n",
+      "2022-09-27 01:28:42.970259 Epoch 80, Training loss 0.0026266535776667296\n",
+      "Accuracy 0.8739\n",
+      "2022-09-27 01:29:17.789872 Epoch 81, Training loss 0.002629738082624972\n",
+      "Accuracy 0.8293\n",
+      "2022-09-27 01:29:52.582860 Epoch 82, Training loss 0.002455442949589342\n",
+      "Accuracy 0.8607\n",
+      "2022-09-27 01:30:27.408886 Epoch 83, Training loss 0.0025438448656722903\n",
+      "Accuracy 0.8655\n",
+      "2022-09-27 01:31:02.291248 Epoch 84, Training loss 0.002423196797706187\n",
+      "Accuracy 0.8578\n",
+      "2022-09-27 01:31:37.102470 Epoch 85, Training loss 0.0024109718545526266\n",
+      "Accuracy 0.7455\n",
+      "2022-09-27 01:32:11.989691 Epoch 86, Training loss 0.0023477092297561467\n",
+      "Accuracy 0.836\n",
+      "2022-09-27 01:32:46.865699 Epoch 87, Training loss 0.0023276400180161\n",
+      "Accuracy 0.8642\n",
+      "2022-09-27 01:33:21.697916 Epoch 88, Training loss 0.0022459224379435183\n",
+      "Accuracy 0.8682\n",
+      "2022-09-27 01:33:56.585042 Epoch 89, Training loss 0.002209980172030628\n",
+      "Accuracy 0.8557\n",
+      "2022-09-27 01:34:31.419157 Epoch 90, Training loss 0.002163350013382733\n",
+      "Accuracy 0.8596\n",
+      "2022-09-27 01:35:06.249967 Epoch 91, Training loss 0.0021276473146583886\n",
+      "Accuracy 0.8548\n",
+      "2022-09-27 01:35:41.114797 Epoch 92, Training loss 0.002105054545737803\n",
+      "Accuracy 0.8668\n",
+      "2022-09-27 01:36:15.965805 Epoch 93, Training loss 0.0020178296439163387\n",
+      "Accuracy 0.7552\n",
+      "2022-09-27 01:36:50.833614 Epoch 94, Training loss 0.0020240535029768946\n",
+      "Accuracy 0.8617\n",
+      "2022-09-27 01:37:25.721199 Epoch 95, Training loss 0.001980039118118584\n",
+      "Accuracy 0.8737\n",
+      "2022-09-27 01:38:00.552439 Epoch 96, Training loss 0.0019311160943098367\n",
+      "Accuracy 0.8454\n",
+      "2022-09-27 01:38:35.575515 Epoch 97, Training loss 0.001909213643129915\n",
+      "Accuracy 0.8619\n",
+      "2022-09-27 01:39:10.520125 Epoch 98, Training loss 0.001912226176224649\n",
+      "Accuracy 0.8421\n",
+      "2022-09-27 01:39:45.473696 Epoch 99, Training loss 0.0017805966605059802\n",
+      "Accuracy 0.8548\n"
      ]
     }
    ],
    "source": [
-    "trained_model = train_model(resnet18, optimizer, loss_fn, cifar10_train_dataloader, cifar10_test_dataloader, 50)"
+    "trained_model = train_model(resnet18, optimizer, loss_fn, cifar10_train_dataloader, cifar10_test_dataloader, 100)"
    ]
   },
   {
